static/css/pattern-page.css
/* General */

main.patterns {
  margin-bottom: 0;
  margin-bottom: 20rem;
}

main.patterns section {
  margin: 2rem 0;
}

main.patterns header {
  margin: 3rem 0 0 0;
}

main.patterns section:last-of-type {
  margin-bottom: 0;
}

main.patterns h2 {
  font-size: 1.2rem;
  position: sticky;
  top: 11rem;
  text-transform: lowercase;
}

main.patterns section p,
main.patterns section li {
  font-weight: 400;
}

/* Heading */

.pattern-status {
  margin: 0 0 1rem 0;
}

.pattern-status .archived,
.pattern-status .future-pattern {
  display: inline-block;
  color: #898993;
  font-size: 1.1rem;
  margin: 0;
}

.archived span,
.future-pattern span {
  display: inline-block;
  font-weight: 500;
  margin: 0 1rem 0 0;
  padding: 0.1rem 0rem;
  text-transform: uppercase;
  text-align: center;
}

.archived span {
  background-color:#637578;
  color: white;
  width: 175px
}

.future-pattern span {
  border: 1px solid #979797;
  color: black;
  width: 200px;
}

.pattern-heading {
  display: flex;
  align-items: center;
}

.pattern-heading-title {
  display: inline-block;
  font-size: 3.5rem;
}

.pattern-heading .new-pattern {
  border: 1px solid #979797;
  font-weight: 500;
  margin: 0 0 -8px 2rem;
  padding: 0 0 3px 0;
  text-align: center;
  text-transform: lowercase;
  width: 3.5rem;
}

.pattern-heading-share {
  height: 100%;
  list-style: none;
  margin: 0;
  padding: 0;
  margin-left: auto;
}

.pattern-heading li {
  display: inline-block;
  font-size: 1.25rem;
}

.pattern-heading li:first-of-type {
  margin: 0 1rem 0 0;
}

.pattern-heading .share,
.pattern-heading .print {
  color: #29283D;
  font-weight: 400;
  text-transform: lowercase;
}

.pattern-heading .share:hover,
.pattern-heading .print:hover {
  font-weight: 500;
}

/* Image */

.pattern-image-div {
  background-color: #EFEFEF;
  border: 2px solid black;
  height: 500px;
}

.pattern-image-div.permission-and-consent {
  background-color: #FFAA72;
}

.pattern-image-div.authentication {
  background-color: #72C7FF;
}

.pattern-image-div img {
  display: block;
  margin: 0 auto;
  height: 100%;
}

/* Description */

.description p {
  font-size: 2rem;
  line-height: 1.2;
}

/* Advantages & Limitations */

.advantages li,
.limitations li {
  font-size: 1.3rem;
  line-height: 1.2;
  margin: 1.4rem 0;
}

.advantages li::before,
.limitations li::before {
  content: "— ";
}

.advantages li:first-of-type, .limitations li:first-of-type {
  margin: 0 0 1rem 0;
}

.advantages li:last-of-type, .limitations li:last-of-type {
  margin: 1rem 0 0 0;
}

/* Examples */

.examples li {
  display: flex;
  font-size: 1.25rem;
  justify-content: space-between;
}

.examples li:first-of-type {
  margin: 0 0 2rem 0;
}

.examples li p {
  line-height: 1.2;
}

.examples-title a {
  color: #29283D;
  text-decoration: underline;
}

/* Related Patterns */

.related-patterns ul {
  display: flex;
}

.related-patterns li {
  display: flex;
}

.related-patterns li:first-of-type {
  margin: 0 2rem 0 0;
}

.related-patterns li div {
  background-color: #EFEFEF;
  margin: 0 2rem 0 0;
}

.related-patterns img {
  height: 200px;
}

.related-patterns a {
  color: #29283D;
  font-size: 1.3rem;
}

.related-patterns a p {
  line-height: 1.2;
}

/* Feedback and Status */

.feedback-and-status {
  background-color: #EFEFEF;
  margin: 5rem 0 0 0;
  padding: 1rem 0;

}

.feedback {
  display: flex;
}

.feedback p {
  flex: 0 0 auto;
  font-size: 1.3rem;
  margin: 0 2rem 0 0;
}

.feedback .success-message {
  display: none;
}

.feedback-form {
  display: flex;
  flex-wrap: wrap;
}

.feedback-form input, .feedback-form a {
  color: #29283D;
  font-size: 1.3rem;
  margin: 0 2rem 0 0;
}

.feedback-form a, .feedback-form button {
  text-decoration: underline;
}

.feedback-form .usage-feedback {
  flex: 0 0 auto;
}

.feedback-form .detailed-feedback {
  display: none;
  width: 100%;
}

.feedback-form .detailed-feedback input {
  border: 1px solid black;
  height: 10rem;
  margin: 1rem 0;
  width: 100%;
}

.feedback-form .detailed-feedback button {
  font-size: 1.2rem;
}

.feedback-form .usage-feedback input {
  background: 0;
  border: 0;
  cursor: pointer;
  height: 100%;
  text-decoration: underline;
}

